--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,5 +31,21 @@
         dest: /etc/resolv.conf
         mode: 0644
 
+    - name: disable resolv updates by network manager
+      ini_file:
+        path: /etc/NetworkManager/NetworkManager.conf
+        section: main
+        option: dns
+        value: none
+        mode: 0644
+      when: ansible_distribution_major_version == "8"
+
+    - name: disable resolv updates by network scripts
+      lineinfile:
+        path: /etc/sysconfig/network-scripts/ifcfg-eth0
+        line: "PEERDNS=no"
+        regexp: "^PEERDNS="
+      when: ansible_distribution_major_version == "7"
+
   become: true
   become_user: root
